k8s/aoe2-groups-proxy/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aoe2-groups-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: auth-oauth2-proxy-errors@kubernetescrd,auth-oauth2-proxy-auth-collaborators@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - aoe2-groups.zetatwo.dev
      secretName: aoe2-groups-staging-tls
  rules:
    - host: aoe2-groups.zetatwo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aoe2-groups-proxy
                port:
                  number: 8080
